revised readme.MD; remove a dummy testcase file